@@ -2,5 +2,5 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree>
-    <field name="rec_name" expand="1"/>
+    <field name="rec_name" expand="1" icon="icon"/>
 </tree>
