@@ -2,7 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree>
-    <field name="loss_summary"/>
+    <field name="loss_summary" icon="icon"/>
     <field name="benefit_summary"/>
     <field name="eligibility_comment_wrapped"/>
     <field name="eligibility_status"/>
