@@ -1,3 +1,4 @@
+* FEA#8076 Améliorations graphiques sur le processus de déclaration de sinistre
 * FEA#7983 Les décisions d'éligibilité pour les services délivrés ont leurs modèles de configuration plutôt que l'utilisation de données complémentaires
 * FEA#7782 Ajout du refus automatique d'un service depuis les règles d'éligibilité
 
@@ -5,7 +6,7 @@ Version 1.14 - 2017-11-09
 * Ajout d'un assistant de refus de l'éligibilité
 
 Version 1.12 - 2017-04-28
-* FEA#0000 Possibilité de forcer la validation ou le refus de l'éligibilité 
+* FEA#0000 Possibilité de forcer la validation ou le refus de l'éligibilité
 
 Version 1.10 - 2016-11-02
 * FEA#0000 Vérifier l'éligibilité lors de l'ordonnancement d'une indemnisation
