@@ -1,3 +1,4 @@
+* FEA#8076 UI enhancements on claim declaration process
 * FEA#7983 Eligibility decisions for delivered services now have their own configuration model instead of using extras datas
 * FEA#7782 Allow automatic refusal of a service from eligibility rules
 
